Fixing the padding and vertical alignment of the affiliates logos in the affiliates sliders

--- a/app/assets/stylesheets/components/_affiliates.scss
+++ b/app/assets/stylesheets/components/_affiliates.scss
@@ -61,6 +61,13 @@
         margin: 0 auto;
       }
     }
+    .slick-track {
+      display: flex;
+    }
+    .item {
+      padding: 0 5px;
+      margin: auto 0;
+    }
   }
 
   @include min-screen($bpMed) {
